[package]
name = "reclaw-migrate-openclaw"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Migration tooling from OpenClaw config to Reclaw Core config"
repository = "https://github.com/aint-no-code/reclaw-migrate-openclaw"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "0.9.8"
